# kind-lab-to-nwb

./: .gitignore  .pre-commit-config.yaml  README.md  dj_local_conf.json  make_env.yml  prova.py  pyproject.toml
.github/workflows/: add-to-dashboard.yml  test-install.yml
src/kind_lab_to_nwb/arc_ecephys_2024/: __init__.py  behaviorinterface.py  convert_all_sessions.py  convert_session.py  insert_session.py  metadata.yaml  notes.md  nwbconverter.py
src/kind_lab_to_nwb/arc_ecephys_2024/fear_conditioning_paradigm/: NWB_conversion_utils.py  OpenEphys.py  animal.py  coherence.py  coherogram.py  oscillations.py  params.py  params_utils.py  pipeline.py  psd.py  raw_data_extraction.py  session.py  signal_processing.py  single_freezing_epochs_analysis.py  spectrogram.py  timings.py  timings_processing.py
src/kind_lab_to_nwb/arc_ecephys_2024/spyglass_mock/: __init__.py  ingest_behavior.py  ingest_ephys.py  ingest_lfp.py  ingest_sorting.py  ingest_video.py  insert_session.py  mock_behavior_nwbfile.py  mock_complete_session.py  mock_ephys_and_behavior_nwbfile.py  mock_ephys_nwbfile.py  mock_epoch_and_video_nwbfile.py  mock_lfp_nwbfile.py  mock_sorting_nwbfile.py  mock_video_nwbfile.py
src/kind_lab_to_nwb/arc_ecephys_2024/spyglass_utils/: __init__.py  add_behavior.py  add_behavioral_video.py  add_ecephys.py  add_eeg.py  add_lfp.py
src/kind_lab_to_nwb/arc_ecephys_2024/tutorial/: access_data_tutorial.ipynb  arc_ecephys_2024.ipynb  spyglass_tutorial.ipynb
src/kind_lab_to_nwb/arc_ecephys_2024/utils/: __init__.py  add_behavior.py  add_behavioral_video.py  add_ecephys.py  time_alignment.py
src/kind_lab_to_nwb/rat_behavioural_phenotyping_2025/: notes.md  requirements.txt
src/kind_lab_to_nwb/rat_behavioural_phenotyping_2025/auditory_fear_conditioning/: __init__.py  behaviordatainterface.py  (+6 more)
src/kind_lab_to_nwb/spyglass_utils/: __init__.py  clean_db.py  events_table.py  insert_events.py  insert_lfp.py  print_tables.py
(+73 files in other folders)
